adding neumorphic styling and breaking up css

--- a/index.html
+++ b/index.html
@@ -4,24 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Josh got FIred</title>
+    <script src="https://kit.fontawesome.com/12e06ec26c.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <header>header</header>
+        <header>
+            Josh got <span style="color: red;">FI</span>red
+            <nav>
+                <a href="">About</a>
+                <a href="">Blog</a>
+            </nav>
+        </header>
         <main class="content">
-            <div class="card">1</div>
-            <div class="card">2</div>
-            <div class="card">3</div>
-            <div class="card">4</div>
-            <div class="card">5</div>
-            <div class="card">6</div>
-            <div class="card">7</div>
-            <div class="card">8</div>
+            <div class="card neu">1</div>
+            <div class="card neu">2</div>
+            <div class="card neu">3</div>
+            <div class="card neu">4</div>
+            <div class="card neu">5</div>
+            <div class="card neu">6</div>
+            <div class="card neu">7</div>
+            <div class="card neu">8</div>
         </main>
-        <footer>footer</footer>
+        <footer>
+            <a href="https://twitter.com/J0SHYAP" class="footer-link neu"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com/joshua.c.yap" class="footer-link neu"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.linkedin.com/in/joshuacyap" class="footer-link neu"><i class="fab fa-linkedin-in"></i></a>
+        </footer>
     </div>
 </body>
 </html>
