navbar, footer, and layout updates

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Josh got FIred</title>
+    <link rel="shortcut icon" type="image/jpg" href="favicon.png"/>
     <script src="https://kit.fontawesome.com/12e06ec26c.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container main">
         <header>
-            Josh got <span style="color: red;">FI</span>red
-            <nav>
-                <a href="">About</a>
+            <a href="index.html"><h1 class="navhome">JoshGot<span style="color: red;">FI</span>red</h1></a>
+            <nav class="navlinks">
+                <a href="about.html">About</a>
                 <a href="">Blog</a>
             </nav>
         </header>
