good enough for now

--- a/about.html
+++ b/about.html
@@ -15,57 +15,21 @@
         <header>
             <a href="index.html"><h1 class="navhome">JoshGot<span style="color: red;">FI</span>red</h1></a>
             <nav class="navlinks">
-                <a href="about.html">About</a>
-                <a href="blogposts.html">Blog</a>
+                <a href="about.html" class="neu navcard">About</a>
+                <a href="blogposts.html" class="neu navcard">Blog</a>
             </nav>
         </header>
         <main class="content">
-            <div class="card neu">
+            <div class="non-click-card non-click-neu">
                 <h3>About me</h3>
                 <p>Hi, my name is <strong>Josh</strong>.</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repudiandae suscipit ducimus velit, voluptates itaque. Quaerat iusto provident eaque ex similique? Quam libero ad cum ullam sed sunt, amet nulla!</p>
-            </div>
+                <p>I am super passionate about personal finance. I think the idea of getting your money to work for you is incredibly powerful and interesting. That is why I started this blog. Feel free to check out some blog posts on this site if you:</p>
+                <ul>
+                    <li>like having freedom to do what you want, when you want</li>
+                    <li>have a job you don't enjoy</li>
+                    <li>know that your true passions in life aren't particularly profitable</li>
+                </ul>
+            <div>
         </main>
         <footer>
             <a href="https://twitter.com/J0SHYAP" target="_blank" rel="noopener" class="footer-link neu"><i class="fab fa-twitter"></i></a>
