--- a/blogposts.html
+++ b/blogposts.html
@@ -15,22 +15,39 @@
         <header>
             <a href="index.html"><h1 class="navhome">JoshGot<span style="color: red;">FI</span>red</h1></a>
             <nav class="navlinks">
-                <a href="about.html">About</a>
-                <a href="blogposts.html">Blog</a>
+                <a href="about.html" class="neu navcard">About</a>
+                <a href="blogposts.html" class="neu navcard">Blog</a>
             </nav>
         </header>
         <main class="content">
             <div class="card neu">
-                <h3>Title</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis error voluptas rerum optio consequuntur ipsa eius, consequatur nam minus culpa reprehenderit dolor animi sequi velit adipisci itaque. Perferendis, esse placeat.</p>
+                <h3>What is FIRE?</h3>
+                <p>"FIRE" is an acronymn for "financial independence retire early". It is a relatively young movement that has risen to popularity as individuals have begun to place higher value on their time and freedom, rather than on material goods.</p>
             </div>
-            <div class="card neu">2</div>
-            <div class="card neu">3</div>
-            <div class="card neu">4</div>
-            <div class="card neu">5</div>
-            <div class="card neu">6</div>
-            <div class="card neu">7</div>
-            <div class="card neu">8</div>
+            <div class="card neu">
+                <h3>Getting started</h3>
+                <p>The idea of retiring in your 40s, 30s, or even 20s may sound ridiculous, but there is increasing precedent. There are many ways for you to achieve financial freedom. Read this post for some tips to get started off on the right foot.</p>
+            </div>
+            <div class="card neu">
+                <h3>Common FIRE misconceptions</h3>
+                <p>The biggest gripe I hear about FIRE is that people don't want to forgo life in the present for a better future. I would argue that FIRE can help everyone in both the current and future though. In my mind, FIRE is more about maximizing the things and activities that bring you true joy and cutting out the excess waste elsewhere.</p>
+            </div>
+            <div class="card neu">
+                <h3>Sidehustles</h3>
+                <p>The easiest way to achieve FIRE status is to have a high-paying salary while saving aggressively. What if you cannot substantially increase your income for some reason though? Developing additional income streams is a great way to supplement your existing income.</p>
+            </div>
+            <div class="card neu">
+                <h3>ETFs 101</h3>
+                <p>Exchange traded funds, or ETFs, are a staple in nearly every FIRE proponents toolkit. They are essentially baskets of stocks that let you own slices or percentages of stocks instead of buying stock in individual companies. This allows you to very easily diversify your portfolio and garner consistent returns. </p>
+            </div>
+            <div class="card neu">
+                <h3>Differents paths to FIRE status</h3>
+                <p>Ever heard of LeanFire, FatFIRE, Barista FIRE? It turns out that there is no once-size-fits-all FIRE benchmark. Everyone can reach FIRE at different points depending on individual risk tolerance, lifestyle choices, and thoughts on "retirement".</p>
+            </div>
+            <div class="card neu">
+                <h3>Best YouTube resources for FIRE </h3>
+                <p>The internet is truly an amazing tool that we all take for granted. There is so much information available to you if you are willing to look. Take a look at this list of our favorite YouTube channels, creators, and more.</p>
+            </div>
         </main>
         <footer>
             <a href="https://twitter.com/J0SHYAP" target="_blank" rel="noopener" class="footer-link neu"><i class="fab fa-twitter"></i></a>
