--- a/index.html
+++ b/index.html
@@ -15,22 +15,14 @@
         <header>
             <a href="index.html"><h1 class="navhome">JoshGot<span style="color: red;">FI</span>red</h1></a>
             <nav class="navlinks">
-                <a href="about.html">About</a>
-                <a href="blogposts.html">Blog</a>
+                <a href="about.html" class="neu navcard">About</a>
+                <a href="blogposts.html" class="neu navcard">Blog</a>
             </nav>
         </header>
         <main class="content">
-            <div class="card neu">
-                <h3>Title</h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis error voluptas rerum optio consequuntur ipsa eius, consequatur nam minus culpa reprehenderit dolor animi sequi velit adipisci itaque. Perferendis, esse placeat.</p>
+            <div>
+                <img src="fire-banner.png" alt="Financial Independence Retire Early banner image" class="neu-image">            
             </div>
-            <div class="card neu">2</div>
-            <div class="card neu">3</div>
-            <div class="card neu">4</div>
-            <div class="card neu">5</div>
-            <div class="card neu">6</div>
-            <div class="card neu">7</div>
-            <div class="card neu">8</div>
         </main>
         <footer>
             <a href="https://twitter.com/J0SHYAP" target="_blank" rel="noopener" class="footer-link neu"><i class="fab fa-twitter"></i></a>
