forgot a few font styles

--- a/blogposts.html
+++ b/blogposts.html
@@ -21,8 +21,8 @@
         </header>
         <main class="content">
             <div class="card neu">
-                <h3>What is FIRE?</h3>
-                <p>"FIRE" is an acronymn for "financial independence retire early". It is a relatively young movement that has risen to popularity as individuals have begun to place higher value on their time and freedom, rather than on material goods.</p>
+                <h3>What is <strong>FIRE</strong>?</h3>
+                <p>"FIRE" is an acronymn for "financial independence retire early". It is a relatively young movement that has risen to popularity as individuals have begun to place higher value on their <em>time</em> and <u>freedom</u>, rather than on <b>material goods</b>.</p>
             </div>
             <div class="card neu">
                 <h3>Getting started</h3>
